report-finder-package-md-source/objects/Report_Finder_Job_Function__c.object
<CustomObject>
    <description>Tags that can be applied to organize and filter Report Finder Items. Relevant to job functions within the organization.</description>
    <label>Report Finder Job Function</label>
    <nameField>
        <displayFormat>RFJF-{0}</displayFormat>
        <label>Job Function #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Finder Job Functions</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function_Description__c</fullName>
        <label>Job Function Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Function_Name__c</fullName>
        <label>Job Function Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Function_Name__c</columns>
        <columns>Job_Function_Description__c</columns>
        <columns>Is_Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>